// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parse array > no child successful 1`] = `<DocumentFragment />`;

exports[`Parse array > one child successful 1`] = `
<DocumentFragment>
  Mock Text
</DocumentFragment>
`;

exports[`Parse array > two child successful 1`] = `
<DocumentFragment>
  Mock TextMock Text
</DocumentFragment>
`;

exports[`Parse epigraph > EPIGRAPH with all successful 1`] = `
<DocumentFragment>
  <blockquote
    class="bp6-blockquote sicp-epigraph"
  >
    Mock Text
    <div
      class="sicp-attribution"
    >
      -Author
      <i>
        Title
      </i>
      2021
    </div>
  </blockquote>
</DocumentFragment>
`;

exports[`Parse epigraph > EPIGRAPH with author successful 1`] = `
<DocumentFragment>
  <blockquote
    class="bp6-blockquote sicp-epigraph"
  >
    Mock Text
    <div
      class="sicp-attribution"
    >
      -Author
    </div>
  </blockquote>
</DocumentFragment>
`;

exports[`Parse epigraph > EPIGRAPH with date successful 1`] = `
<DocumentFragment>
  <blockquote
    class="bp6-blockquote sicp-epigraph"
  >
    Mock Text
    <div
      class="sicp-attribution"
    >
      -2021
    </div>
  </blockquote>
</DocumentFragment>
`;

exports[`Parse epigraph > EPIGRAPH with none successful 1`] = `
<DocumentFragment>
  <blockquote
    class="bp6-blockquote sicp-epigraph"
  >
    Mock Text
  </blockquote>
</DocumentFragment>
`;

exports[`Parse epigraph > EPIGRAPH with title successful 1`] = `
<DocumentFragment>
  <blockquote
    class="bp6-blockquote sicp-epigraph"
  >
    Mock Text
    <div
      class="sicp-attribution"
    >
      -
      <i>
        Title
      </i>
    </div>
  </blockquote>
</DocumentFragment>
`;

exports[`Parse exercise > EXERCISE with solution successful 1`] = `
<DocumentFragment>
  <div
    class="sicp-anchor-link-container"
  >
    <div
      class="sicp-exercise bp6-card bp6-elevation-1"
    >
      <b />
      <div />
      <div
        class="sicp-button-container"
      >
        <button
          class="bp6-button bp6-large sicp-show-solution-button"
          type="button"
        >
          <span
            class="bp6-button-text"
          >
            Show Solution
          </span>
        </button>
      </div>
      <div
        class="bp6-collapse sicp-solution"
      >
        <div
          aria-hidden="true"
          class="bp6-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Parse exercise > EXERCISE without solution successful 1`] = `
<DocumentFragment>
  <div
    class="sicp-anchor-link-container"
  >
    <div
      class="sicp-exercise bp6-card bp6-elevation-1"
    >
      <b>
        Title
      </b>
      <div>
        Mock Text
      </div>
      <div
        class="sicp-button-container"
      >
        <button
          class="bp6-button bp6-large sicp-show-solution-button"
          type="button"
        >
          <span
            class="bp6-button-text"
          >
            Show Solution
          </span>
        </button>
      </div>
      <div
        class="bp6-collapse sicp-solution"
      >
        <div
          aria-hidden="true"
          class="bp6-collapse-body"
          style="transform: translateY(-undefinedpx);"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Parse figures > FIGURE with image and scale successful 1`] = `
<DocumentFragment>
  <div
    class="sicp-anchor-link-container"
  >
    <a
      class="sicp-anchor-link"
      data-discover="true"
      href="/id"
      style="top: 36px;"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-link"
      >
        <svg
          data-icon="link"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M4.99 11.99c.28 0 .53-.11.71-.29l6-6a1.003 1.003 0 00-1.42-1.42l-6 6a1.003 1.003 0 00.71 1.71zm3.85-2.02L6.4 12.41l-1 1-.01-.01c-.36.36-.85.6-1.4.6-1.1 0-2-.9-2-2 0-.55.24-1.04.6-1.4l-.01-.01 1-1 2.44-2.44c-.33-.1-.67-.16-1.03-.16-1.1 0-2.09.46-2.81 1.19l-.02-.02-1 1 .02.02c-.73.72-1.19 1.71-1.19 2.81 0 2.21 1.79 4 4 4 1.1 0 2.09-.46 2.81-1.19l.02.02 1-1-.02-.02c.73-.72 1.19-1.71 1.19-2.81 0-.35-.06-.69-.15-1.02zm7.15-5.98c0-2.21-1.79-4-4-4-1.1 0-2.09.46-2.81 1.19l-.02-.02-1 1 .02.02c-.72.72-1.19 1.71-1.19 2.81 0 .36.06.69.15 1.02l2.44-2.44 1-1 .01.01c.36-.36.85-.6 1.4-.6 1.1 0 2 .9 2 2 0 .55-.24 1.04-.6 1.4l.01.01-1 1-2.43 2.45c.33.09.67.15 1.02.15 1.1 0 2.09-.46 2.81-1.19l.02.02 1-1-.02-.02a3.92 3.92 0 001.19-2.81z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </a>
    <div
      class="sicp-figure"
    >
      <img
        alt="id"
        src="https://source-academy.github.io/sicp/sicp.png"
        width="50%"
      />
      <h5
        class="sicp-caption"
      >
        nameMock Text
      </h5>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Parse figures > FIGURE with image successful 1`] = `
<DocumentFragment>
  <div
    class="sicp-anchor-link-container"
  >
    <a
      class="sicp-anchor-link"
      data-discover="true"
      href="/id"
      style="top: 36px;"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-link"
      >
        <svg
          data-icon="link"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M4.99 11.99c.28 0 .53-.11.71-.29l6-6a1.003 1.003 0 00-1.42-1.42l-6 6a1.003 1.003 0 00.71 1.71zm3.85-2.02L6.4 12.41l-1 1-.01-.01c-.36.36-.85.6-1.4.6-1.1 0-2-.9-2-2 0-.55.24-1.04.6-1.4l-.01-.01 1-1 2.44-2.44c-.33-.1-.67-.16-1.03-.16-1.1 0-2.09.46-2.81 1.19l-.02-.02-1 1 .02.02c-.73.72-1.19 1.71-1.19 2.81 0 2.21 1.79 4 4 4 1.1 0 2.09-.46 2.81-1.19l.02.02 1-1-.02-.02c.73-.72 1.19-1.71 1.19-2.81 0-.35-.06-.69-.15-1.02zm7.15-5.98c0-2.21-1.79-4-4-4-1.1 0-2.09.46-2.81 1.19l-.02-.02-1 1 .02.02c-.72.72-1.19 1.71-1.19 2.81 0 .36.06.69.15 1.02l2.44-2.44 1-1 .01.01c.36-.36.85-.6 1.4-.6 1.1 0 2 .9 2 2 0 .55-.24 1.04-.6 1.4l.01.01-1 1-2.43 2.45c.33.09.67.15 1.02.15 1.1 0 2.09-.46 2.81-1.19l.02.02 1-1-.02-.02a3.92 3.92 0 001.19-2.81z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </a>
    <div
      class="sicp-figure"
    >
      <img
        alt="id"
        src="https://source-academy.github.io/sicp/sicp.png"
        width="100%"
      />
      <h5
        class="sicp-caption"
      >
        nameMock Text
      </h5>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Parse figures > FIGURE with snippet successful 1`] = `
<DocumentFragment>
  <div
    class="sicp-anchor-link-container"
  >
    <a
      class="sicp-anchor-link"
      data-discover="true"
      href="/id"
      style="top: 36px;"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-link"
      >
        <svg
          data-icon="link"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M4.99 11.99c.28 0 .53-.11.71-.29l6-6a1.003 1.003 0 00-1.42-1.42l-6 6a1.003 1.003 0 00.71 1.71zm3.85-2.02L6.4 12.41l-1 1-.01-.01c-.36.36-.85.6-1.4.6-1.1 0-2-.9-2-2 0-.55.24-1.04.6-1.4l-.01-.01 1-1 2.44-2.44c-.33-.1-.67-.16-1.03-.16-1.1 0-2.09.46-2.81 1.19l-.02-.02-1 1 .02.02c-.73.72-1.19 1.71-1.19 2.81 0 2.21 1.79 4 4 4 1.1 0 2.09-.46 2.81-1.19l.02.02 1-1-.02-.02c.73-.72 1.19-1.71 1.19-2.81 0-.35-.06-.69-.15-1.02zm7.15-5.98c0-2.21-1.79-4-4-4-1.1 0-2.09.46-2.81 1.19l-.02-.02-1 1 .02.02c-.72.72-1.19 1.71-1.19 2.81 0 .36.06.69.15 1.02l2.44-2.44 1-1 .01.01c.36-.36.85-.6 1.4-.6 1.1 0 2 .9 2 2 0 .55-.24 1.04-.6 1.4l.01.01-1 1-2.43 2.45c.33.09.67.15 1.02.15 1.1 0 2.09-.46 2.81-1.19l.02.02 1-1-.02-.02a3.92 3.92 0 001.19-2.81z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </a>
    <div
      class="sicp-figure"
    >
      <div>
        Code Snippet
      </div>
      <h5
        class="sicp-caption"
      >
        nameMock Text
      </h5>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Parse figures > FIGURE with table successful 1`] = `
<DocumentFragment>
  <div
    class="sicp-anchor-link-container"
  >
    <a
      class="sicp-anchor-link"
      data-discover="true"
      href="/id"
      style="top: 36px;"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-link"
      >
        <svg
          data-icon="link"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M4.99 11.99c.28 0 .53-.11.71-.29l6-6a1.003 1.003 0 00-1.42-1.42l-6 6a1.003 1.003 0 00.71 1.71zm3.85-2.02L6.4 12.41l-1 1-.01-.01c-.36.36-.85.6-1.4.6-1.1 0-2-.9-2-2 0-.55.24-1.04.6-1.4l-.01-.01 1-1 2.44-2.44c-.33-.1-.67-.16-1.03-.16-1.1 0-2.09.46-2.81 1.19l-.02-.02-1 1 .02.02c-.73.72-1.19 1.71-1.19 2.81 0 2.21 1.79 4 4 4 1.1 0 2.09-.46 2.81-1.19l.02.02 1-1-.02-.02c.73-.72 1.19-1.71 1.19-2.81 0-.35-.06-.69-.15-1.02zm7.15-5.98c0-2.21-1.79-4-4-4-1.1 0-2.09.46-2.81 1.19l-.02-.02-1 1 .02.02c-.72.72-1.19 1.71-1.19 2.81 0 .36.06.69.15 1.02l2.44-2.44 1-1 .01.01c.36-.36.85-.6 1.4-.6 1.1 0 2 .9 2 2 0 .55-.24 1.04-.6 1.4l.01.01-1 1-2.43 2.45c.33.09.67.15 1.02.15 1.1 0 2.09-.46 2.81-1.19l.02.02 1-1-.02-.02a3.92 3.92 0 001.19-2.81z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </a>
    <div
      class="sicp-figure"
    >
      <table>
        <tbody>
          <tr>
            <td>
              Mock Text
            </td>
            <td>
              Mock Text
            </td>
          </tr>
          <tr>
            <td>
              Mock Text
            </td>
            <td>
              Mock Text
            </td>
          </tr>
        </tbody>
      </table>
      <h5
        class="sicp-caption"
      >
        nameMock Text
      </h5>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Parse footnote > DISPLAYFOOTNOTE count is 1 successful 1`] = `
<DocumentFragment>
  <hr />
  <div
    class="sicp-footnote"
  >
    <div />
    <a
      href=""
    >
      [1] 
    </a>
    Mock Text
  </div>
</DocumentFragment>
`;

exports[`Parse footnote > DISPLAYFOOTNOTE count is 2 successful 1`] = `
<DocumentFragment>
  <div
    class="sicp-footnote"
  >
    <div />
    <a
      href=""
    >
      [2] 
    </a>
    Mock Text
  </div>
</DocumentFragment>
`;

exports[`Parse heading > SUBHEADING  successful 1`] = `
<DocumentFragment>
  <div
    class="sicp-anchor-link-container"
  >
    <h2
      class="bp6-heading"
    >
      Mock Text
    </h2>
  </div>
</DocumentFragment>
`;

exports[`Parse heading > SUBSUBHEADING  successful 1`] = `
<DocumentFragment>
  <div
    class="sicp-anchor-link-container"
  >
    <h4
      class="bp6-heading"
    >
      <br />
      Mock Text
    </h4>
  </div>
</DocumentFragment>
`;

exports[`Parse latex > LATEX block successful 1`] = `
<DocumentFragment>
  <span
    class="__Latex__"
  >
    <span
      class="katex-display"
    >
      <span
        class="katex"
      >
        <span
          class="katex-mathml"
        >
          <math
            display="block"
            xmlns="http://www.w3.org/1998/Math/MathML"
          >
            <semantics>
              <mrow>
                <mi>
                  t
                </mi>
                <mi>
                  e
                </mi>
                <mi>
                  s
                </mi>
                <mi>
                  t
                </mi>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                test
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          class="katex-html"
        >
          <span
            class="base"
          >
            <span
              class="strut"
              style="height:0.6151em;"
            />
            <span
              class="mord mathnormal"
            >
              t
            </span>
            <span
              class="mord mathnormal"
            >
              es
            </span>
            <span
              class="mord mathnormal"
            >
              t
            </span>
          </span>
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Parse latex > LATEX inline successful 1`] = `
<DocumentFragment>
  <span
    class="__Latex__"
  >
    <span
      class="katex"
    >
      <span
        class="katex-mathml"
      >
        <math
          xmlns="http://www.w3.org/1998/Math/MathML"
        >
          <semantics>
            <mrow>
              <mi>
                t
              </mi>
              <mi>
                e
              </mi>
              <mi>
                s
              </mi>
              <mi>
                t
              </mi>
            </mrow>
            <annotation
              encoding="application/x-tex"
            >
              test
            </annotation>
          </semantics>
        </math>
      </span>
      <span
        aria-hidden="true"
        class="katex-html"
      >
        <span
          class="base"
        >
          <span
            class="strut"
            style="height:0.6151em;"
          />
          <span
            class="mord mathnormal"
          >
            t
          </span>
          <span
            class="mord mathnormal"
          >
            es
          </span>
          <span
            class="mord mathnormal"
          >
            t
          </span>
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`Parse links > FOOTNOTE_REF  successful 1`] = `
<DocumentFragment>
  <sup>
    <a
      data-discover="true"
      href="/bad-link"
    >
      link
    </a>
  </sup>
</DocumentFragment>
`;

exports[`Parse links > LINK  successful 1`] = `
<DocumentFragment>
  <a
    href="bad-link"
  >
    link
  </a>
</DocumentFragment>
`;

exports[`Parse links > REF  successful 1`] = `
<DocumentFragment>
  <a
    data-discover="true"
    href="/bad-link"
  >
    link
  </a>
</DocumentFragment>
`;

exports[`Parse list > OL  successful 1`] = `
<DocumentFragment>
  <ol
    class="bp6-list"
  >
    <li>
      Mock Text
    </li>
  </ol>
</DocumentFragment>
`;

exports[`Parse list > UL  successful 1`] = `
<DocumentFragment>
  <ul
    class="bp6-list"
  >
    <li>
      Mock Text
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Parse object > no tag 1`] = `
<DocumentFragment>
  Mock Text
</DocumentFragment>
`;

exports[`Parse object > successful 1`] = `
<DocumentFragment>
  Mock Text
</DocumentFragment>
`;

exports[`Parse reference > REFERENCE  successful 1`] = `
<DocumentFragment>
  <div
    class="sicp-reference"
  >
    Mock Text
  </div>
</DocumentFragment>
`;

exports[`Parse snippet > SNIPPET no eval successful 1`] = `
<DocumentFragment>
  <pre
    class="bp6-code-block"
  >
    const a = 1;
a+1;
  </pre>
</DocumentFragment>
`;

exports[`Parse snippet > SNIPPET with latex successful 1`] = `
<DocumentFragment>
  <pre
    class="bp6-code-block"
  >
    <span
      class="__Latex__"
    >
      const a = 1;
a+1;
    </span>
  </pre>
</DocumentFragment>
`;

exports[`Parse snippet > SNIPPET with prepend successful 1`] = `
<DocumentFragment>
  <div>
    Code Snippet
  </div>
</DocumentFragment>
`;

exports[`Parse snippet > SNIPPET without prepend successful 1`] = `
<DocumentFragment>
  <div>
    Code Snippet
  </div>
</DocumentFragment>
`;

exports[`Parse snippet > SNIPPET without prepend with output successful 1`] = `
<DocumentFragment>
  <div>
    Code Snippet
  </div>
</DocumentFragment>
`;

exports[`Parse styling > B  successful 1`] = `
<DocumentFragment>
  <b>
    Mock Text
  </b>
</DocumentFragment>
`;

exports[`Parse styling > EM  successful 1`] = `
<DocumentFragment>
  <em>
    Mock Text
  </em>
</DocumentFragment>
`;

exports[`Parse styling > JAVASCRIPTINLINE  successful 1`] = `
<DocumentFragment>
  <code
    class="bp6-code"
  />
</DocumentFragment>
`;

exports[`Parse styling > META  successful 1`] = `
<DocumentFragment>
  <em />
</DocumentFragment>
`;

exports[`Parse styling > TT  successful 1`] = `
<DocumentFragment>
  <code
    class="bp6-code"
  >
    Mock Text
  </code>
</DocumentFragment>
`;

exports[`Parse symbol > BR  successful 1`] = `
<DocumentFragment>
  <br />
</DocumentFragment>
`;

exports[`Parse table > TABLE  successful 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td>
          Mock Text
        </td>
        <td>
          Mock Text
        </td>
      </tr>
      <tr>
        <td>
          Mock Text
        </td>
        <td>
          Mock Text
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Parse title > TITLE  successful 1`] = `
<DocumentFragment>
  <div
    class="sicp-anchor-link-container"
  >
    <h1
      class="bp6-heading"
    >
      Title
    </h1>
  </div>
</DocumentFragment>
`;
